--- a/.classpath
+++ b/.classpath
@@ -5,8 +5,12 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/librerias"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/libreris"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/kevin/Downloads/gson-2.8.8.jar"/>
 	<classpathentry kind="lib" path="C:/Users/kevin/OneDrive/Escritorio/Programacion3/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin/OneDrive/Escritorio/Programacion3/mysql-connector-j-8.4.0-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Users/kevin/OneDrive/Escritorio/Programacion3/mysql-connector-j-8.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
